[package]
name = "rv3028c7-rtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"

[dev-dependencies]
embedded-hal-mock = "0.9.0"
chrono = "0.4.31"

[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal = "0.3.0"



