[package]
name = "rv3028c7-rtc"
version = "0.4.0"
edition = "2021"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/rv3028c7-rtc"
description = "RV-3028-C7 and similar Real Time Clock (RTC) no_std driver"
readme = "README.md"
keywords = ["no-std", "driver", "embedded-hal", "i2c", "rtc"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = "0.2.7"
rtcc = "0.3.0"

[dev-dependencies]
embedded-hal-mock = "0.9.0"
chrono = "0.4.31"
shared-bus = "0.3.1"
ds323x="0.5.1"

[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal = "0.3.0"



